--- a/index.html
+++ b/index.html
@@ -1,1 +1,106 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Booking</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="movie-select">
+    <p>Select movie :</p>
+    <select name="" id="movie">
+      <option value="10">kigdom $10</option>
+      <option value="20">Mark $20</option>
+      <option value="5">Look $5</option>
+      <option value="40">Jhony $40</option>
+    </select>
+  </div>
+  <div class="status">
+    <ul class="show">
+      <li>
+        <div class="seat"></div>
+        <small>N/A</small>
+      </li>
+      <li>
+        <div class="seat booked"></div>
+        <small>Booked</small>
+      </li>
+      <li>
+        <div class="seat selected"></div>
+        <small>selected</small>
+      </li>
+    </ul>
+  </div>
+  <div class="container">
+    <div class="screen"></div>
+    <div class="row">
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat booked"></div>
+      <div class="seat booked"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+    </div>
+    <div class="row">
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat booked"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+    </div>
+    <div class="row">
+      <div class="seat"></div>
+      <div class="seat booked"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat booked"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+    </div>
+    <div class="row">
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat booked"></div>
+      <div class="seat"></div>
+      <div class="seat booked"></div>
+    </div>
+    <div class="row">
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+    </div>
+    <div class="row">
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat booked"></div>
+      <div class="seat booked"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+    </div>
+  </div>
+  <div class="status">
+    <p>
+      You have selected <span id="seats">0</span> seats for a price of $<span id="price">0</span>
+    </p>
+  </div>
+  <script src="script.js"></script>
+</body>
+</html>
